small improvements to shitty proportions

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
           <p>Brazilian based web dev, trying to build stuff to help people (and also pay the bills)</p>
           <p>Language learning enthusiast - both programming and spoken</p>
           <p>Loves animals. Except spiders. Get'em out. Please :(</p>
+          <br /><p id="obs">Also, take it easy on me for this. Trying to step up my frontend game</p>
         </div>
       </div>
     </main>
