updates html and separate bio and about-me text

--- a/index.html
+++ b/index.html
@@ -12,15 +12,20 @@
       </div>
     </header>
     <main>
+      <div class="bio">
+        <img src="images/me.jpg" alt="Me, with eyes kinda closed because of the sun" />
+        <h1>Guilherme Lion Ribeiro</h1>
+        <h4>
+          Software Engineer<br />
+          São Paulo, SP - BR
+        </h4>
+      </div>
       <div class="about-me">
-        <img src="images/me.jpg" alt="Me, with eyes kinda closed because of the sun" "/>
-        <div class="bio">
-          <h3>Hey, I'm Gui!</h3>
-          <p>Brazilian based web dev, trying to build stuff to help people (and also pay the bills)</p>
-          <p>Language learning enthusiast - both programming and spoken</p>
-          <p>Loves animals. Except spiders. Get'em out. Please :(</p>
-          <br /><p id="obs">Also, take it easy on me for this. Trying to step up my frontend game</p>
-        </div>
+        <h3>Hey, I'm Gui!</h3>
+        <p>Brazilian based web dev, trying to build stuff to help people (and also pay the bills)</p>
+        <p>Language learning enthusiast - both programming and spoken</p>
+        <p>Loves animals. Except spiders. Get'em out. Please :(</p>
+        <br /><p id="obs">Also, take it easy on me for this. Trying to step up my frontend game</p>
       </div>
     </main>
     <footer></footer>
