--- a/index.html
+++ b/index.html
@@ -1,31 +1,30 @@
 <!DOCTYPE html>
+<html>
   <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>rollergui's homepage</title>
     <link rel="stylesheet" type="text/css" href="index.css" />
   </head>
   <body>
     <header>
-      <div class="navigation-menu">
-        <ul>
-          <li>about</li>
+      <nav>
+        <ul class="menu">
+          <li><a href="/">about</a></li>
         </ul>
-      </div>
+      </nav>
     </header>
     <main>
-      <div class="bio">
-        <img src="images/me.jpg" alt="Me, with eyes kinda closed because of the sun" />
-        <h1>Guilherme Lion Ribeiro</h1>
-        <h4>
-          Software Engineer<br />
-          São Paulo, SP - BR
-        </h4>
+      <div class="about-cover">
+        <img src="images/me.jpg" />
+        <h1>Guilherme Ribeiro</h1>
+        <h2>Software Developer</h2>
+        <h3>São Paulo, SP - BR</h3>
       </div>
-      <div class="about-me">
-        <h3>Hey, I'm Gui!</h3>
-        <p>Brazilian based web dev, trying to build stuff to help people (and also pay the bills)</p>
-        <p>Language learning enthusiast - both programming and spoken</p>
-        <p>Loves animals. Except spiders. Get'em out. Please :(</p>
-        <br /><p id="obs">Also, take it easy on me for this. Trying to step up my frontend game</p>
+      <div class="about-summary">
+        <p>Working as a software developer since 2016, I've been through different companies, both in size and business areas, which I believe contributed significantly for my professional growth.</p>
+        <p>I'm a functional programming enthusiast, but I've used several different programming languages, paradigms and overall tools throughout these years.</p>
+        <p>I'm keen on learning diverse things, so I'm changing hobbies every now and then.</p>
       </div>
     </main>
     <footer></footer>
